objects/ESN_BP_News__c.object
<CustomObject>
    <description>Object used to display news in the Best practices application</description>
    <fields>
        <fullName>ESN_BP_News_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the news is active or not.
Used to trigger notifications in conjunctions with worklows.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Content__c</fullName>
        <description>Content of the news</description>
        <inlineHelpText>Content of the news</inlineHelpText>
        <label>News Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Ending_Date__c</fullName>
        <description>Ending date of the news. The news shouldn&apos;t be displayed after this date.</description>
        <inlineHelpText>Ending date of the news. The news shouldn&apos;t be displayed after this date.</inlineHelpText>
        <label>Ending date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Image__c</fullName>
        <description>Salesforce ID of the image to be displayed</description>
        <inlineHelpText>Salesforce ID of the image to be displayed</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Starting_Date__c</fullName>
        <description>Starting date that the news will be displayed</description>
        <inlineHelpText>Starting date that the news will be displayed</inlineHelpText>
        <label>Starting Date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Title__c</fullName>
        <description>Titel of the news</description>
        <label>News Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Type__c</fullName>
        <description>Type of news. If none is selected, the news is a standard one</description>
        <inlineHelpText>Type of news. If none is selected, the news is a standard one</inlineHelpText>
        <label>News Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reveal</fullName>
                </value>
                <value>
                    <fullName>Edito</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                    <default>true</default>
                    <label>News</label>
                </value>
                <value>
                    <fullName>Winner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_BP_News_Video_URL__c</fullName>
        <description>URL to the video to be displayed.</description>
        <inlineHelpText>URL to the video to be displayed.</inlineHelpText>
        <label>Video URL</label>
        <type>TextArea</type>
    </fields>
    <label>Best practice news</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}{000000000}</displayFormat>
        <label>Best practice news ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Best practice news</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>